turtleart.polygon6.Polygon6.scala.error
Erreur de compilation :
Polygon6:1: error: Missing closing brace `}' assumed here
override def run() {
^Polygon6:1: error: expected start of definition
override def run() {
         ^